--- a/projects/amen/demos/orchestration/integrations/integrations/index.html
+++ b/projects/amen/demos/orchestration/integrations/integrations/index.html
@@ -45,7 +45,7 @@
     <article>
       <h1>Integrations</h1>
       <h2>Active Integrations</h2>
-      <p><a href="demos/orchestration/integrations/ports/index.html">HL7 ADT v2.x</a></p>
+      <p><a href="demos/orchestration/integrations/ports/index.html">Parsing Algorithm</a></p>
       <img style="display: none; padding-top: 1rem;" src="assets/images/demo-discovery.png">
       <a href="demos/orchestration/integrations/discovery/index.html" class="button primary">Enable Discovery mode</a>
     </article>
