--- a/projects/amen/demos/orchestration/integrations/mapping-publish/index.html
+++ b/projects/amen/demos/orchestration/integrations/mapping-publish/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Skunk Works | TigerConnect</title>
+  <title>AMEN Skunk Works Mapping | TigerConnect</title>
   <base href="../../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -43,7 +43,28 @@
   </header>
   <main>
     <article>
-      <h1></h1>
+      <h1>Mapping</h1>
+      <section>
+        <h2>Publish Mapping</h2>
+        <div class="row cards">
+          <div class="card" style="width: 100%;">
+            <form class="mapping-groups">
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-patient-id-field">Patient ID<input type="checkbox" id="yale-medical-center-patient-patient-id-field" class="toggle" name="yale-medical-center-patient-patient-id-field" title="Patient ID" value="Patient ID"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-patient-id-field">Patient ID element</label><input type="text" id="yale-medical-center-patient-patient-id-field-element" name="yale-medical-center-patient-patient-id-field" value="PID.2" disabled="disabled"></fieldset><div id="yale-medical-center-patient-patient-id-field-preview" class="preview dim"><span class="label">Preview</span><p>E00000329</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-mrn-field">MRN<input type="checkbox" id="yale-medical-center-patient-mrn-field" class="toggle" name="yale-medical-center-patient-mrn-field" title="MRN" value="MRN"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-mrn-field">MRN element</label><input type="text" id="yale-medical-center-patient-mrn-field-element" name="yale-medical-center-patient-mrn-field" value="PID.3" disabled="disabled"></fieldset><div id="yale-medical-center-patient-mrn-field-preview" class="preview dim"><span class="label">Preview</span><p>M000000350</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-first-name-field">First Name<input type="checkbox" id="yale-medical-center-patient-first-name-field" class="toggle" name="yale-medical-center-patient-first-name-field" title="First Name" value="First Name"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-first-name-field">First Name element</label><input type="text" id="yale-medical-center-patient-first-name-field-element" name="yale-medical-center-patient-first-name-field" value="PID.5.3" disabled="disabled"></fieldset><div id="yale-medical-center-patient-first-name-field-preview" class="preview dim"><span class="label">Preview</span><p>TOM</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-last-name-field">Last Name<input type="checkbox" id="yale-medical-center-patient-last-name-field" class="toggle" name="yale-medical-center-patient-last-name-field" title="Last Name" value="Last Name"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-last-name-field">Last Name element</label><input type="text" id="yale-medical-center-patient-last-name-field-element" name="yale-medical-center-patient-last-name-field" value="PID.5.2" disabled="disabled"></fieldset><div id="yale-medical-center-patient-last-name-field-preview" class="preview dim"><span class="label">Preview</span><p>BLUEBERRY</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-date-of-birth-field">Date of Birth<input type="checkbox" id="yale-medical-center-patient-date-of-birth-field" class="toggle" name="yale-medical-center-patient-date-of-birth-field" title="Date of Birth" value="Date of Birth"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-date-of-birth-field">Date of Birth element</label><input type="text" id="yale-medical-center-patient-date-of-birth-field-element" name="yale-medical-center-patient-date-of-birth-field" value="PID.7" disabled="disabled"></fieldset><div id="yale-medical-center-patient-date-of-birth-field-preview" class="preview dim"><span class="label">Preview</span><p>19711221</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-gender-field">Gender<input type="checkbox" id="yale-medical-center-patient-gender-field" class="toggle" name="yale-medical-center-patient-gender-field" title="Gender" value="Gender"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-gender-field">Gender element</label><input type="text" id="yale-medical-center-patient-gender-field-element" name="yale-medical-center-patient-gender-field" value="PID.8" disabled="disabled"></fieldset><div id="yale-medical-center-patient-gender-field-preview" class="preview dim"><span class="label">Preview</span><p>M</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-patient-class-field">Patient Class<input type="checkbox" id="yale-medical-center-patient-patient-class-field" class="toggle" name="yale-medical-center-patient-patient-class-field" title="Patient Class" value="Patient Class"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-patient-class-field">Patient Class element</label><input type="text" id="yale-medical-center-patient-patient-class-field-element" name="yale-medical-center-patient-patient-class-field" value="PV[1].4" disabled="disabled"></fieldset><div id="yale-medical-center-patient-patient-class-field-preview" class="preview dim"><span class="label">Preview</span><p>EL</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-attending-physician-field">Attending Physician<input type="checkbox" id="yale-medical-center-patient-attending-physician-field" class="toggle" name="yale-medical-center-patient-attending-physician-field" title="Attending Physician" value="Attending Physician"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-attending-physician-field">Attending Physician element</label><input type="text" id="yale-medical-center-patient-attending-physician-field-element" name="yale-medical-center-patient-attending-physician-field" value="PV[1].7" disabled="disabled"></fieldset><div id="yale-medical-center-patient-attending-physician-field-preview" class="preview dim"><span class="label">Preview</span><p>Fingergut Judy</p></div></div>
+            </form>
+            <div class="button-group">
+              <a href="demos/orchestration/integrations/integrations-b/index.html" class="button primary">Publish</a>
+              <a href="demos/orchestration/integrations/discovery/index.html" class="button tertiary">Back to Discovery</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </article>
   </main>
   <footer>
