--- a/projects/amen/demos/orchestration-a/integrations/index.html
+++ b/projects/amen/demos/orchestration-a/integrations/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Skunk Works Dashboard | TigerConnect</title>
+  <title>AMEN Skunk Works Integrations | TigerConnect</title>
   <base href="../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -33,8 +33,8 @@
   <header>
     <nav>
       <ul>
-        <li>Dashboard</li>
-        <li><a href="demos/orchestration/integrations/index.html">Integrations</a></li>
+        <li><a href="demos/orchestration/dashboard/index.html">Dashboard</a></li>
+        <li>Integrations</li>
         <li><a href="demos/orchestration/entities/index.html">Entities</a></li>
         <li><a href="demos/orchestration/workflows/index.html">Workflows</a></li>
         <li><a href="demos/orchestration/insights/index.html">Insights</a></li>
@@ -43,8 +43,23 @@
   </header>
   <main>
     <article>
-      <h1>Dashboard</h1>
-      
+      <h1>Integrations</h1>
+      <h2>Discovery</h2>
+      <ul class="no-bullets">
+        <li><a href="demos/orchestration/integrations/ports/index.html">Protocol &amp; Ports</a></li>
+        <li><a href="demos/orchestration/integrations/discovery/index.html">Discovery</a></li>
+        <li><a href="demos/orchestration/integrations/messages-display/index.html">Messages</a></li>
+      </ul>
+      <h2>Mapping</h2>
+      <ul class="no-bullets">
+        <li><a href="demos/orchestration/integrations/mapping-display/index.html">Mapping</a></li>
+      </ul>
+      <h2>Deployment</h2>
+      <ul class="no-bullets">
+        <li><a href="demos/orchestration/integrations/deploy-to-agent/index.html">Deploy to Agent</a></li>
+        <li><a href="demos/orchestration/integrations/deploy-active/index.html">Activate</a></li>
+        <li><a href="demos/orchestration/integrations/deploy-statistics/index.html">Statistics</a></li>
+      </ul>
     </article>
   </main>
   <footer>
