AMEN Dashboard setup

--- a/projects/amen/demos/orchestration/dashboard/index.html
+++ b/projects/amen/demos/orchestration/dashboard/index.html
@@ -44,7 +44,20 @@
   <main>
     <article>
       <h1>Dashboard</h1>
-      
+      <section>
+        <h2>Agents</h2>
+        <ul class="no-bullets">
+          <li>Add new agent</li>
+          <li>Edit existing agent</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Integrations</h2>
+        <ul class="no-bullets">
+          <li>Add new integration</li>
+          <li>Edit existing integration</li>
+        </ul>
+      </section>
     </article>
   </main>
   <footer>
