Added hidden select chevron-down icon

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
           <li><a href="components/toasts.html">Toasts</a></li>
         </ul>
       </section>
-      <section>
+      <!-- <section>
         <h2>Prototypes</h2>
         <h3>AMEN</h3>
         <ul class="contents">
-          <!-- <li><a href="projects/amen/views/dashboard/index.html" target="_blank">Dashboard v.0.2.1</a></li> -->
+          <li><a href="projects/amen/views/dashboard/index.html" target="_blank">Dashboard v.0.2.1</a></li>
           <li><a href="projects/amen/demos/orchestration/dashboard/index.html" target="_blank">Dashboard v.0.2.2</a></li>
         </ul>
         <h3>Messenger</h3>
@@ -91,7 +91,7 @@
           <li><a href="projects/v1/views/concepts/concept-d.html" target="_blank">Concept D</a></li>
         </ul>
         <p><a href="projects/v1/views/locations/bawh.html" target="_blank">Location Switch Concept</a></p>
-      </section>
+      </section> -->
     </article>
   </main>
   <footer>
